updating devfile with sonarlint

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -40,6 +40,9 @@ components:
   - id: ms-vscode/vscode-github-pullrequest/latest
     type: chePlugin
 
+  - id: sonarsource/sonarlint-vscode/latest
+    type: chePlugin
+
 commands:
   -
     name: Package
