--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 quarkus.log.level=SEVERE
 quarkus.banner.enabled=false
 
-org.eclipse.che.chedo.CheWorkspaceService/mp-rest/url=${CHE_API_INTERNAL}
-org.eclipse.che.chedo.CheWorkspaceService/mp-rest/scope=javax.inject.Singleton
+org.eclipse.che.chedo.restclient.CheWorkspaceRestClient/mp-rest/url=${CHE_API_INTERNAL}
+org.eclipse.che.chedo.restclient.CheWorkspaceRestClient/mp-rest/scope=javax.inject.Singleton
 
 quarkus.package.runner-suffix=do
 quarkus.package.output-name=che
