adding open command to open file in CheTheia
Signed-off-by: Sun Tan <sutan@redhat.com>

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
       <groupId>info.picocli</groupId>
       <artifactId>picocli-codegen</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-undertow-websockets</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jsonb</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
