--- a/devfile.yaml
+++ b/devfile.yaml
@@ -74,6 +74,15 @@ commands:
         workdir: ${CHE_PROJECTS_ROOT}/chedo
 
   -
+    name: Package Native (native-image-xmx=2G)
+    actions:
+      -
+        type: exec
+        component: centos-quarkus-maven
+        command: "mvn package -Dnative -Dmaven.test.skip -Dquarkus.native.native-image-xmx=2G"
+        workdir: ${CHE_PROJECTS_ROOT}/chedo
+
+  -
     name: Start Native
     actions:
       -
